clusters/prod-cluster/organizations/numinia/alchemist-tower/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: alchemist-tower-strip-prefix
  namespace: numinia
spec:
  stripPrefix:
    forceSlash: true
    prefixes:
      - "/alchemist-tower"

---

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rewrite-root
  namespace: numinia
spec:
  redirectRegex:
    regex: "^/alchemist-tower/?$"
    replacement: "/"
    permanent: false
