clusters/prod-cluster/organizations/numinia/alchemist-tower/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperfy2-numinia-alchemist-tower-deployment
  namespace: numinia
  labels:
    environment: pro
    app: hyperfy2-numinia-alchemist-tower
    pod-type: alchemist-tower
  annotations:
    keda.sh/auto-scaling: "enabled"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hyperfy2-numinia-alchemist-tower
      environment: pro
      pod-type: hyperfy2-numinia-alchemist-tower
  template:
    metadata:
      labels:
        app: hyperfy2-numinia-alchemist-tower
        environment: pro
        pod-type: hyperfy2-numinia-alchemist-tower
    spec:
      serviceAccountName: aws-secret-manager-sa
      volumes:
        - name: hyperfy2-persistent-storage
          persistentVolumeClaim:
            claimName: numinia-shared-pvc
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: hyperfy2-numinia-alchemist-tower-aws-secrets
      containers:
        - name: hyperfy2-numinia-alchemist-tower
          image: ghcr.io/hyperfy-xyz/hyperfy:sha-37dfc5ed4d3c8bb7e573efd6abb7a767a8cca1b0
          volumeMounts:
            - name: hyperfy2-persistent-storage
              mountPath: /mnt/hyperfy2-persistent-storage
              subPath: alchemist-tower
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
          resources:
            requests:
              memory: ${MEMORY}
              cpu: ${CPU}
            limits:
              memory: ${LIMITS_MEMORY}
              cpu: ${LIMITS_CPU}
