clusters/prod-cluster/organizations/numinia/alchemist-tower/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alchemist-tower
    pod-type: alchemist-tower
  name: alchemist-tower
  namespace: numinia
spec:
  selector:
    app: alchemist-tower
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
