clusters/prod-cluster/organizations/numinia/alchemist-tower/base/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alchemist-tower-route
  namespace: numinia
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`numinia.xyz`) && Path(`/alchemist-tower`)"
      kind: Rule
      middlewares:
        - name: "rewrite-root"
          namespace: numinia
      services:
        - name: "alchemist-tower"
          port: 3000
    - match: "Host(`numinia.xyz`) && PathPrefix(`/alchemist-tower`)"
      kind: Rule
      middlewares:
        - name: "alchemist-tower-strip-prefix"
          namespace: numinia
      services:
        - name: "alchemist-tower"
          port: 3000
  tls:
    secretName: numinia-tls
